# autonomous_open_problem_lab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  OUTPUT_SUMMARY.md  PROGRAM_100_SCORE_ROADMAP_KO.md  PROGRAM_DETAILED_DESIGN.md  PROGRAM_REALITY_CHECK_KO.md  PROGRAM_USER_GUIDE.md  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ci.yml  release.yml
aopl/: __main__.py
aopl/apps/: __init__.py  counterexample_engine.py  formalizer.py  harvester.py  normalizer.py  orchestrator.py  paper_generator.py  proof_engine.py  registry.py  scorer.py  submission_builder.py  verifier.py
aopl/cli/: main.py
aopl/core/: __init__.py  config_store.py  gates.py  graph_utils.py  io_utils.py  paths.py  runtime.py  schema_utils.py  state_machine.py  types.py
aopl/services/: __init__.py  engine_factory.py  release.py
apps/counterexample_engine/: README.md
apps/formalizer/: README.md
apps/harvester/: README.md
apps/normalizer/: README.md
apps/orchestrator/: README.md
apps/paper_generator/: README.md
apps/proof_engine/: README.md
apps/registry/: README.md
apps/scorer/: README.md
apps/submission_builder/: README.md
apps/verifier/: README.md
configs/formalization/: lean.yaml  mathlib_mapping.yaml  obligation_thresholds.yaml
configs/global/: observability.yaml  quality_policy.yaml  queue.yaml  runtime.yaml  security.yaml  storage.yaml
configs/paper/: bilingual_terms.yaml  citation_rules.yaml  journal_style.yaml  section_rules.yaml
configs/problems/: combinatorics.yaml  (+3 more)
docs/: README.md
rust/: Cargo.toml
(+103 files in other folders)
