[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-open-problem-lab"
version = "0.1.0"
description = "완전 무인 자동화 수학 난제 수집·탐색·검증·논문화 시스템"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Autonomous Open Problem Lab Team" }
]
license = { text = "MIT" }
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.22.0",
  "networkx>=3.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0"
]

[project.scripts]
aopl = "aopl.cli.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.setuptools]
packages = ["aopl", "aopl.cli", "aopl.core", "aopl.apps", "aopl.services", "aopl.utils", "aopl.formalization", "aopl.papers", "aopl.submission"]
